# Mengnex

./: .gitignore  CHANGELOG.md  README.md  start.ps1
api/: Cargo.toml
api/src/: main.rs  swagger.html
api/src/core/: app.rs  error.rs  health.rs  mod.rs  openapi.rs
api/src/infra/: database.rs
api/src/infra/entities/: app_setting.rs  app_task.rs  media_file.rs  media_item.rs  media_library.rs  mod.rs  photo_asset.rs  scan_task.rs
api/src/modules/: mod.rs
api/src/modules/libraries/: dto.rs  handlers.rs  mod.rs
api/src/modules/media/: dto.rs  handlers.rs  mod.rs
api/src/modules/photos/: dto.rs  handlers.rs  mod.rs  service.rs
api/src/modules/preferences/: dto.rs  handlers.rs  mod.rs
api/src/modules/scanner/: dto.rs  handlers.rs  mod.rs  service.rs
api/src/modules/tasks/: dto.rs  handlers.rs  mod.rs  service.rs
docs/i18n/zh-CN/: CHANGELOG.md  README.md
web/: next.config.ts  openapi-ts.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/(content)/anime/: page.tsx
web/app/(content)/game/: page.tsx
web/app/(content)/manga/: page.tsx
web/app/(content)/movie/: page.tsx
web/app/(content)/music/: page.tsx
web/app/(content)/photo/: layout.tsx  page.tsx  template.tsx
web/app/(content)/photo/collection/: page.tsx
web/app/(content)/video/: page.tsx
web/app/(setting)/settings/: layout.tsx  page.tsx
web/app/components/: Head.tsx  SideBar.tsx  ThemeProvider.tsx
web/app/tasks/: page.tsx
web/openapi/: mengnex.json
web/src/api/: client.ts
web/types/: sidebar.ts
(+16 files in other folders)
